crates/kula-wasm/tests/snapshots/format__example_02_nuclear_family.snap
---
source: crates/kula-wasm/tests/format.rs
expression: formatted
---
# Example 2: A nuclear family — one couple, one biological child.
# Carol's `birth` sub-statement points to the marriage; her parents
# are derived as the spouses of that marriage.

kula 0.1

person alice  name:"Alice Sharma"  gender:female  born:1950-04-12
person bob    name:"Bob Sharma"    gender:male    born:1948-11-30
person carol  name:"Carol Sharma"  gender:female  born:1975-09-03
  birth m_alice_bob

marriage m_alice_bob alice bob  start:1972-05-12
