crates/kula-wasm/tests/snapshots/format__example_03_three_generations.snap
---
source: crates/kula-wasm/tests/format.rs
expression: formatted
---
# Example 3: Three generations, with a divorce and an adoption.
#
# - Alice is the bio daughter of Ramesh and Sita.
# - Alice and Bob have a bio daughter Carol and an adopted son Ravi.
# - The Alice-Bob marriage ends in divorce; Bob later dies.
# - Ravi's birth year is approximate (~1980).

kula 0.1

# ---- Generation 1 (founders) ----
person ramesh  name:"Ramesh Sharma"  gender:male    born:1925-03-10  died:2005-08-22
person sita    name:"Sita Sharma"    gender:female  born:1928-07-15  died:2010-11-04

marriage m_ramesh_sita ramesh sita  start:1948-06-10

# ---- Generation 2 ----
person alice  name:"Alice Sharma"  gender:female  born:1950-04-12
  birth m_ramesh_sita
person bob  name:"Bob Sharma"  gender:male  born:1948-11-30  died:2020-03-15

marriage m_alice_bob alice bob  start:1972-05-12  end:1990-08-01  end_reason:divorce

# ---- Generation 3 ----
person carol  name:"Carol Sharma"  gender:female  born:1975-09-03
  birth m_alice_bob

person ravi  name:"Ravi Sharma"  gender:male  born:~1980
  adoption m_alice_bob  start:1985-06-01
